--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.15",
     "@react-three/fiber": "^8.15.11",
+    "@react-three/postprocessing": "^2.15.11",
     "@types/three": "^0.158.2",
     "framer-motion": "^10.16.5",
+    "gsap": "^3.12.2",
     "kute.js": "^2.2.4",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "three": "^0.158.0"
+    "three": "^0.158.0",
+    "three-stdlib": "^2.28.5"
   },
   "devDependencies": {
+    "@types/gsap": "^3.0.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
