--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "gsap": "^3.12.2",
     "kute.js": "^2.2.4",
     "lodash.debounce": "^4.0.8",
+    "masonry-layout": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "tailwind-merge": "^2.0.0",
     "three": "^0.158.0",
     "three-stdlib": "^2.28.5"
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/masonry-layout": "^4.2.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
