--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@react-three/drei": "^9.88.15",
     "@react-three/fiber": "^8.15.11",
     "@react-three/postprocessing": "^2.15.11",
+    "@studio-freight/react-lenis": "^0.0.37",
     "@types/three": "^0.158.2",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "kute.js": "^2.2.4",
     "lodash.debounce": "^4.0.8",
-    "masonry-layout": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
