--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/three": "^0.158.2",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
     "kute.js": "^2.2.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.0.0",
     "three": "^0.158.0",
@@ -40,6 +43,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
