--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.12.2",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
+    "jotai": "^2.5.1",
     "kute.js": "^2.2.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
